fix(ea): fix double scroll on small devices (#5615)

--- a/apps/ea/src/styles.scss
+++ b/apps/ea/src/styles.scss
@@ -87,7 +87,7 @@ engineering-app {
     mat-dialog-content {
       // the following includes the height of the user survey box.
       // remove 58px-3rem if you remove the box
-      @apply max-h-none h-[calc(100%-170px-58px-3rem)];
+      @apply max-h-none h-[calc(100%-170px-100px-3rem)]  sm:h-[calc(100%-170px-58px-3rem)];
     }
   }
 
